--- a/website/css stylesheet_ind.css
+++ b/website/css stylesheet_ind.css
@@ -12,6 +12,13 @@ body {
   margin-left: 1%;
 }
 
+.ojuju-my-name {
+  font-family: "Ojuju", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+}
+
 .navbar {
   font-size: larger;
 }
@@ -32,11 +39,13 @@ body {
 }
 
 .dropdown {
-  float: left;
+  float: right;
   overflow: hidden;
+  position: relative;
+  display: inline-block;
 }
 
-.dropdown .dropbtn {
+/*.dropdown{
   font-size: 16px;  
   border: none;
   outline: none;
@@ -45,16 +54,28 @@ body {
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-}
+}*/
 
 .dropdown-content {
   display: none;
+  background-color: white;
   position: absolute;
-  background-color: #f9f9f9;
+  float: right;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
   z-index: 1;
 }
+
+.navbar ul li:hover .dropdown-content {
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+  display: inline-block;
+} 
+
 
 .dropdown-content a {
   float: none;
@@ -63,11 +84,9 @@ body {
   text-decoration: none;
   display: block;
   text-align: left;
+  background-color: white;
 }
 
-.dropdown-content a:hover {
-  background-color: pink;
-}
 
 .dropdown:hover .dropdown-content {
   display: block;
@@ -166,5 +185,25 @@ footer{
 
 .footer-links {
   display: inline-flex;
+}
+
+/* Aside-Table*/
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap:wrap ;
+  padding: 5px;
+  margin: 2px;
+  gap: 50px;
+ 
+ }
+
+ .p3{
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  background-color: lightgray;
+  border-radius: 500%;
+  width: 30%;
+  text-align: center;
+  padding-top: 83px;
 }
 
