--- a/website/css stylesheet_ind.css
+++ b/website/css stylesheet_ind.css
@@ -1,125 +1,128 @@
 
+
 body {
-    background-color: #f4eced;
+  background-color: #f4eced;
 }
 
 .my-name {
-  color: #ea6a91;
-  font-size: larger;
-  float: left;
-  font-size: 35px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-left: 1%;
+color: #ea6a91;
+font-size: larger;
+font-weight: bolder;
+font-size: 35px;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+margin-left: 1%;
+text-align: center;
 }
 
 .ojuju-my-name {
-  font-family: "Ojuju", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 100;
-  font-style: normal;
+font-family: "Ojuju", sans-serif;
+font-optical-sizing: auto;
+font-weight: 100;
+font-style: normal;
 }
 
 .navbar {
-  font-size: larger;
+font-size: larger;
 }
 
 
 .home-pic img{
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: auto;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: auto;
+  border-radius: 0%;
 }
 
 .p-home {
-  text-align: center;
-  color: maroon;
-  font-weight: bolder;
-  font-size: 25px;
+text-align: center;
+color: maroon;
+font-weight: bolder;
+font-size: 28px;
 }
 
 .dropdown {
-  float: right;
-  overflow: hidden;
-  position: relative;
-  display: inline-block;
+float: right;
+overflow: hidden;
+position: relative;
+display: inline-block;
 }
 
 /*.dropdown{
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
+font-size: 16px;  
+border: none;
+outline: none;
+color: white;
+padding: 14px 16px;
+background-color: inherit;
+font-family: inherit;
+margin: 0;
 }*/
 
 .dropdown-content {
-  display: none;
-  background-color: white;
-  position: absolute;
-  float: right;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
-  z-index: 1;
+display: none;
+background-color: white;
+position: absolute;
+float: right;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+padding: 12px 16px;
+z-index: 1;
 }
 
 .navbar ul li:hover .dropdown-content {
-  position: absolute;
-  background-color: white;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+position: absolute;
+background-color: white;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 
-  display: inline-block;
+display: inline-block;
 } 
 
 
 .dropdown-content a {
-  float: none;
-  color: blue;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-  background-color: white;
+float: none;
+color: blue;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+text-align: left;
+background-color: white;
 }
 
 
 .dropdown:hover .dropdown-content {
-  display: block;
+display: block;
 }
 
 h1 {
-  font-size: 30px;
-  background-color: white;
-  color:blue;
-  text-align: center;
+font-size: 30px;
+background-color: white;
+color:blue;
+text-align: center;
 }
-  
+
 h2 {
-  margin-left: 7%;
+margin-left: 7%;
 }
 
 .Capaciti {
-  color: black;
-  font-weight: bold;
+color: black;
+font-weight: bold;
 }
 
 h3 {
-  font-size: 25px;
+font-size: 25px;
 }
 
 h4 {
-  font-size: 26px;
+font-size: 26px;
 }
 
 
 .arrow {
-  margin-left: 47%;
-  font-size: 30px;
+margin-left: 47%;
+font-size: 30px;
 }
 
 .arrow:hover {
@@ -128,82 +131,98 @@ background-color: pink;
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 li a {
-    display: block;
-    padding: 20px;
-    margin: 5px;
-    color: blue;
-    font-size: larger;
-    font-weight: bold;
-    text-decoration: none;
-    float: right;
-  }
+  display: block;
+  padding: 20px;
+  margin: 5px;
+  color: blue;
+  font-size: larger;
+  font-weight: bold;
+  text-decoration: none;
+  float: right;
+}
+
   
-    
 a:hover {
-    background-color:pink;
-  }
+  background-color:pink;
+}
 
 aside {
-    width: 30%;
-    padding-left: 5px 5px;
-    float: right;
-    margin-left: 10px; 
-    font-style: italic;
-    background-color: lightgray;
-    border-radius: 500%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-      }
+  width: 30%;
+  padding-left: 5px 5px;
+  float: right;
+  margin-left: 10px; 
+  font-style: italic;
+  background-color: lightgray;
+  border-radius: 500%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+    }
 
 .contact {
-  font-family: Comic sans MS;
+font-family: Comic sans MS;
 }
 
 .touch {
-  color: blue;
+color: blue;
 }
 
 .content-form {
-  font-family: Comic sans MS;
-  font-size: 21px;
+font-family: Comic sans MS;
+font-size: 21px;
 }
 
 footer{
-  text-align: center;
-  margin: 60px 0;
+text-align: center;
+margin: 60px 0;
 }
 
 
 .footer-links {
-  display: inline-flex;
+display: inline-flex;
 }
 
 /* Aside-Table*/
 .container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap:wrap ;
-  padding: 5px;
-  margin: 2px;
-  gap: 50px;
- 
- }
+display: flex;
+flex-direction: row;
+flex-wrap:wrap ;
+padding: 10px;
+margin: 1px;
+gap: 50px;
 
- .p3{
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-  background-color: lightgray;
-  border-radius: 500%;
-  width: 30%;
-  text-align: center;
-  padding-top: 83px;
+
+}
+
+p {
+text-align: center;
+font-size: 25px;
+}
+
+.p3{
+box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+background-color: lightgray;
+border-radius: 500%;
+width: 30%;
+text-align: center;
+padding-top: 83px;
+}
+
+.par  {
+text-align: center;
+font-size: 20px;
+}
+
+.work {
+text-align: left;
+font-size: 20px;
 }
 
