--- a/website/css stylesheet_ind.css
+++ b/website/css stylesheet_ind.css
@@ -117,6 +117,7 @@ font-size: 25px;
 
 h4 {
 font-size: 26px;
+text-align: center;
 }
 
 
@@ -173,11 +174,16 @@ font-family: Comic sans MS;
 
 .touch {
 color: blue;
+text-align: center;
+font-weight: bolder;
+font-size: 28px;
+margin-left: 43%;
 }
 
 .content-form {
 font-family: Comic sans MS;
 font-size: 21px;
+text-align: center;
 }
 
 footer{
@@ -207,15 +213,6 @@ text-align: center;
 font-size: 25px;
 }
 
-.p3{
-box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-background-color: lightgray;
-border-radius: 500%;
-width: 30%;
-text-align: center;
-padding-top: 83px;
-}
-
 .par  {
 text-align: center;
 font-size: 20px;
@@ -225,4 +222,13 @@ font-size: 20px;
 text-align: left;
 font-size: 20px;
 }
+
+.peruse {
+text-align: left;
+color: maroon;
+font-weight: bolder;
+font-size: 28px;
+}
+
+
 
