--- a/website/css stylesheet_ind.css
+++ b/website/css stylesheet_ind.css
@@ -23,7 +23,6 @@ body {
   overflow: hidden;
   display: flex;
   justify-content: center; /* Center the navbar items horizontally */
-  align-items: center; /* Center the navbar items vertically */
 }
 
 .dropdown {
@@ -52,8 +51,9 @@ body {
 .navbar ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
-  overflow: hidden;
+  padding-left: 45%;
+ 
+ 
 }
 
 .navbar li {
@@ -167,7 +167,7 @@ h1 {
   font-size: 20px;
   line-height: 1.6;
   margin-bottom: 20px;
-  margin-left: 25%;
+  margin-left: 35%;
   font-family: Arial, Helvetica, sans-serif;
   
 }
